KEYCLOAK-17412 Improve control of model tests